--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
+    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "cross-env": "^4.0.0",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1"
   },
