--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "cross-env": "^4.0.0",
+    "each-async": "^1.1.1",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1"
   },
