--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "cross-env": "^4.0.0",
     "each-async": "^1.1.1",
+    "indent-string": "^3.1.0",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1"
   },
