--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
-    "cross-env": "^4.0.0",
-    "each-async": "^1.1.1",
+    "auth0-lock": "^10.16.0",
+    "bootstrap-vue": "^0.15.8",
     "indent-string": "^3.1.0",
+    "vee-validate": "^2.0.0-rc.3",
     "vue": "^2.2.6",
+    "vue-resource": "^1.3.1",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
@@ -50,7 +52,7 @@
     "http-proxy-middleware": "^0.17.3",
     "webpack-bundle-analyzer": "^2.2.1",
     "cross-env": "^4.0.0",
-    "karma": "^1.4.1",
+    "karma": "^1.7.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
@@ -69,7 +71,7 @@
     "phantomjs-prebuilt": "^2.1.14",
     "chromedriver": "^2.27.2",
     "cross-spawn": "^5.0.1",
-    "nightwatch": "^0.9.12",
+    "nightwatch": "^0.9.15",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
